pagina de error. No existe la url

--- a/src/app/shared/error404/error404.component.html
+++ b/src/app/shared/error404/error404.component.html
@@ -1,9 +1,21 @@
 <div class="container container-fluid">
   <h2 class="text-white text-center shadow-sm">Error: Página no encontrada</h2>
 
+  @defer (on timer(2200)) {
   <img
     src="https://www.hopetutors.com/wp-content/uploads/2016/10/404.gif"
     alt="Error page"
     class="img-thumbnail w-75 h-50"
   />
+  }@placeholder {
+  <button class="btn btn-primary" type="button" disabled>
+    <span
+      class="spinner-border spinner-border-sm"
+      role="status"
+      aria-hidden="true"
+    ></span>
+    Loading...
+  </button>
+
+  }
 </div>
