complemento para el titulo

--- a/src/app/pages/layout/layout.component.html
+++ b/src/app/pages/layout/layout.component.html
@@ -29,8 +29,7 @@
     <button mat-icon-button (click)="sidenav.toggle()">
       <mat-icon>menu</mat-icon>
     </button>
-    <span class="spacer"></span>
-    <span class="text-white mx-auto"> App Biblioteca </span>
+    <span class="text-white mx-auto"> App Biblioteca - Angular v19 </span>
   </mat-toolbar>
   <div class="container">
     <router-outlet></router-outlet>
