se cambia el color del titulo.

--- a/src/app/pages/prestamo/prestamo.component.html
+++ b/src/app/pages/prestamo/prestamo.component.html
@@ -1,4 +1,4 @@
-<h2 class="text-center text-danger">Ver detalles del prestamo</h2>
+<h2 class="text-center text-black">Ver detalles del prestamo</h2>
 @if (prestamo()) {
 <mat-card>
   <mat-card-header>
